--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ html {
 }
 body {
     font-family: 'Open Sans', sans-serif;
+    border: 1px solid #000;
 }
 .container {
     width: 1140px;
@@ -112,13 +113,15 @@ body {
     align-items: center;
 }
 .nav__list-logo {
-    margin-right: auto;
     transition: transform 0.5s ease;
+    margin-right: auto;
 }
 .nav__list-logo:hover {
     transform: scale(1.4);
+
 }
 .nav__link {
+    margin-left: auto;
     text-decoration: none;
     color: #000;
     padding: 10px 20px;
@@ -149,6 +152,7 @@ body {
     width: 40%;
     margin-right: auto;
 }
+
 .main__title {
     font-size: 36px;
 }
@@ -330,6 +334,7 @@ body {
     outline: none;
     border: 1px solid #ececec;
     width: 100%;
+    font-size: 18px;
     border-radius: 5px;
     background-color: #F3F3F3;
     padding: 15px 30px;
